--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 // todo
 // proper release plugin
-// pom with required info
 // nexus-staging-maven-plugin
 // maven-gpg-plugin
 
@@ -26,6 +25,7 @@ subprojects {
     apply plugin: 'maven'
     apply plugin: 'nebula.provided-base'
 
+    archivesBaseName = "xquery-saxon-$name"
     sourceCompatibility = "1.7"
     targetCompatibility = "1.7"
 
@@ -65,5 +65,39 @@ subprojects {
     artifacts {
         archives sourcesJar
         archives javadocJar
+    }
+
+    install {
+        repositories.mavenInstaller {
+            pom.whenConfigured { generatedPom ->
+                generatedPom.dependencies.removeAll { d ->
+                    d.scope == "test"
+                }
+                generatedPom.dependencies = generatedPom.dependencies.sort { d ->
+                    "$d.scope:$d.groupId:$d.artifactId"
+                }
+                generatedPom.project {
+                    name = project.description
+                    description = project.description
+                    url = 'https://github.com/lizardev/xquery-saxon'
+                    licenses {
+                        license {
+                            name = 'Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                            distribution = 'repo'
+                        }
+                    }
+                    developers {
+                        developer {
+                            name = 'Adam Laczynski'
+                            organizationUrl = 'https://github.com/lizardev'
+                        }
+                    }
+                    scm {
+                        url = 'https://github.com/lizardev/xquery-saxon'
+                    }
+                }
+            }
+        }
     }
 }
