--- a/support/build.gradle
+++ b/support/build.gradle
@@ -1,3 +1,5 @@
+description 'XQuery Saxon Support'
+
 dependencies {
     provided "net.sf.saxon:Saxon-HE:$saxonVersion"
     compile "com.google.guava:guava:$guavaVersion"
